# django-athm.dev

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  entrypoint.sh  manage.py  pyproject.toml
athm_tip/core/: apps.py  context_processors.py  signals.py  urls.py  views.py
athm_tip/formats/es/: formats.py
athm_tip/theme/: apps.py
athm_tip/theme/static_src/src/: styles.css
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production  production.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
static/: robots.txt  sitemap.xml
static/css/: animations.css  tip.css
templates/: base.html  landing.html  thank_you.html  tip.html
templates/partials/: _feature_card.html  _github_badge.html  _header.html  _toasts.html  athm_button.html
